--- a/src/app/create-exam/create-exam.component.html
+++ b/src/app/create-exam/create-exam.component.html
@@ -31,7 +31,7 @@
                   </div>
                 </div> -->
                 <div class="pt-1 mb-4">
-                  <button class="btn btn-lg btn-block" [disabled]="ExamFom.invalid" type="submit" (click)="NavigateToexamGrade(ExamFom)" 
+                  <button class="btn btn-lg btn-block" [disabled]="ExamFom.invalid" type="submit" 
                   style="background-color:#40844e;color: white;">التالي</button>
                 </div>
                 <!-- <button [routerLink]="['/CreateQestion']" style="width: 150px;height: 50px;border-radius: 25px;background-color:#40844e;border: 1px solid transparent;color: white;">التالي</button> -->
