--- a/src/app/create-qestion/create-qestion.component.html
+++ b/src/app/create-qestion/create-qestion.component.html
@@ -9,7 +9,7 @@
                                 <form [formGroup]="QuestionFom" >
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form12">السؤال</label>
-                                        <input style="border:1px solid gray;" type="text" id="form12"
+                                        <input style="border:1px solid gray;" type="text" id="question"
                                             class="form-control"  formControlName="question"/>
                                     </div>
                                     <div>
@@ -18,8 +18,8 @@
                                                 <div class="form-outline">
                                                     <label class="form-label" for="radioa">إجابة أ</label>
                                                     <div style="display:flex;justify-content: space-between;">
-                                                        <input class="form-check-input" type="radio"  name="radioa"
-                                                            id="radioa" value="a" (change)="onChange($event)" 
+                                                        <input class="form-check-input" type="radio"  name="radioa" [checked]="radioStatus"
+                                                            id="radioa" value="a" (change)="onChange($event)"
                                                             />
                                                         <input style="margin-right: 30px;" type="text" id="radioa"
                                                             class="form-control" formControlName="option1"/>
@@ -30,8 +30,8 @@
                                                 <div class="form-outline">
                                                     <label class="form-label" for="radiob">إجابة ب</label>
                                                     <div style="display:flex;justify-content: space-between;">
-                                                        <input class="form-check-input" type="radio" name="radioa"
-                                                            id="radiob" value="b"  (change)="onChange($event)"
+                                                        <input class="form-check-input" type="radio" name="radioa" [checked]="radioStatus"
+                                                            id="radiob" value="b"  (change)="onChange($event)" 
                                                             />
                                                         <input style="margin-right: 30px;" type="text" id="radiob"
                                                             class="form-control" formControlName="option2" />
@@ -44,8 +44,8 @@
                                                     <div class="form-outline">
                                                         <label class="form-label" for="radioc">إجابة ج</label>
                                                         <div style="display:flex;justify-content: space-between;">
-                                                            <input class="form-check-input" type="radio"  name="radioa"
-                                                                id="radioc" value="c" (change)="onChange($event)"                                                           />
+                                                            <input class="form-check-input" type="radio"  name="radioa" [checked]="radioStatus"
+                                                                id="radioc" value="c" (change)="onChange($event)"                                                         />
                                                             <input style="margin-right: 30px;" type="text" id="radioc"
                                                                 class="form-control" formControlName="option3"/>
                                                         </div>
@@ -55,8 +55,8 @@
                                                     <div class="form-outline">
                                                         <label class="form-label" for="radiod">إجابة د</label>
                                                         <div style="display:flex;justify-content: space-between;">
-                                                            <input class="form-check-input" type="radio"  name="radioa"
-                                                                id="radiod" value="d" (change)="onChange($event) "                                                            />
+                                                            <input class="form-check-input" type="radio"  name="radioa" [checked]="radioStatus"
+                                                                id="radiod" value="d" (change)="onChange($event) "                                                           />
                                                             <input style="margin-right: 30px;" type="text" id="radiod"
                                                                 class="form-control" formControlName="option4"/>
                                                         </div>
@@ -75,11 +75,13 @@
 
                                     <!-- ********************************************************************* -->
                                     <div style="display:flex;justify-content: start;margin-top: 40px;">
-                                        <button
+                                            <button (click)="exit(QuestionFom)" type="submit" 
                                             style="width: 150px;height: 50px;border-radius: 25px;background-color:#40844e;border: 1px solid transparent;color: white;">انتهاء</button>
-                                        <button
+                                       
+                                            <button (click)="clear(QuestionFom)" type="submit" 
                                             style="width: 150px;height: 50px;border-radius: 25px;background-color:red;border: 1px solid transparent;color: white;">إلغاء</button>
-                                        <button (click)="save(QuestionFom)" type="submit"
+                                       
+                                            <button (click)="save(QuestionFom)" type="submit" 
                                             style="width: 150px;height: 50px;border-radius: 25px;background-color:#1a72c4;border: 1px solid transparent;color: white;">
                                             حفظ وإضافة سؤال جديد</button>
                                     </div>
