--- a/src/app/teatcher-page/teatcher-page.component.html
+++ b/src/app/teatcher-page/teatcher-page.component.html
@@ -8,12 +8,12 @@
                             <!-- *ngFor="let item of AllExam" -->
                             <div  class="col col-md-3 mb-3"  *ngFor="let item of AllExam">
                             <div class="btn-group shadow-0" role="group" style="display:flex;justify-content: center;">
-                                <button type="button" class="btn" data-mdb-color="dark" style="width:160px;height: 50px;background-color: #40844e;color: white;padding: 3px;">{{item.title}}</button>
+                                <button type="button" class="btn" data-mdb-color="dark"   style="width:160px;height: 50px;background-color: #40844e;color: white;padding: 3px;">{{item.title}}</button>
                             
                             </div>
                               <div class="btn-group shadow-3 mt-4" role="group" style="display:flex;justify-content: center;">
-                                <button type="button" class="btn mr-2 ml-3" data-mdb-color="dark"  style="width:30%;border-radius: 15px;background-color: #1a72c4;color: white;" (click)="NavigateToexamGrade(item)">عرض</button>
-                                <!-- <button type="button" class="btn btn-danger ml-1" data-mdb-color="dark" style="width:100px;border-radius: 15px;" (click)="deleteexam(item.id)">حذف</button> -->
+                                <button type="button" class="btn mr-2 ml-3" data-mdb-color="dark"  style="width:30%;border-radius: 15px;background-color: #1a72c4;color: white;" (click)="NavigateToexamGrade(item)">عرض الدرجات</button>
+                                <button type="button" class="btn btn-danger ml-1" data-mdb-color="dark" style="width:100px;border-radius: 15px;" [routerLink]="['/sepcificExam']" (click)="NavigateToexamGradeto(item)">عرض الأمتحان</button>
                              </div>
                              <div>
                                 <p class="mr-2 ml-4 mt-4" style="border:1px dotted gray;padding: 4px;">{{item.dateTime | date:'medium'}}</p>
