--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Bootstrap Static Navbar</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
 </head>
 <body>
 <div >
@@ -14,21 +17,18 @@
             <img src="assets/search.png" alt="" style="width:40px;margin-left: 15px;">
             <h4 [routerLink]="['/Home']" style="display:inline;color:white">مسار</h4>           
           </a> 
-          <button class="navbar-toggler"   type="button"
-          data-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-          aria-expanded="true"
-          aria-controls="navbarCollapse">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            </button>
+            <!-- <div class="navbar-collapse collapse" id="collapse"> -->
+            <div class="navbar-collapse collapse" id="collapse" >
                  <ul class="nav navbar-nav me-auto">
                   <li class="nav-item">
                     <a class="nav-link" *ngIf="isLogin&&!isAdmin"  [routerLink]="['/Home']" routerLinkActive="active">الصفحة الرئيسة</a>
                   </li>
                   <!-- *************************************************  teacher **************************************** -->
                   <li class="nav-item">
-                    <a class="nav-link" *ngIf="isLogin&&!isstudent&&!isAdmin"   [routerLink]="['/TeacherHome']" routerLinkActive="active">المواد التعليمية</a>
+                    <a class="nav-link" *ngIf="isLogin&&!isstudent&&!isAdmin"   [routerLink]="['/TeacherHome/{{idj}}']" routerLinkActive="active">المواد التعليمية</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" *ngIf="isLogin&&!isstudent&&!isAdmin"   [routerLink]="['/CreateExam']" routerLinkActive="active">إضافة امتحان</a>
@@ -75,7 +75,7 @@
                     </li>    
                      
                     <li class="nav-item">
-                      <a class="nav-link" *ngIf='!isLogin'  [routerLink]="['/BeforeRegister']" routerLinkActive="active">إنشاء حساب</a>
+                      <a class="nav-link" *ngIf='!isLogin'  [routerLink]="['/Register']" routerLinkActive="active">إنشاء حساب</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link alogout"  *ngIf='isLogin' (click)="logOut()" style="cursor:pointer">تسجيل الخروج</a>
