--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -60,7 +60,7 @@
                     </div>
   
                     <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
-                    <p class="mb-5 pb-lg-2" style="color: #5760c0;">اذا لم لديك حساب؟<a [routerLink]="['/BeforeRegister']"
+                    <p class="mb-5 pb-lg-2" style="color: #5760c0;">اذا لم لديك حساب؟<a [routerLink]="['/Register']"
                         style="color: #393f81;">أنشئ  الآن</a></p>
                   </form>
   
