--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Bootstrap Static Navbar</title>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
 </head>
 <body>
@@ -17,11 +17,18 @@
             <img src="assets/search.png" alt="" style="width:40px;margin-left: 15px;">
             <h4 [routerLink]="['/Home']" style="display:inline;color:white">مسار</h4>           
           </a> 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="true" aria-label="Toggle navigation">
+          <button class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapse"
+          aria-controls="collapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+
             <span class="navbar-toggler-icon"></span>
             </button>
             <!-- <div class="navbar-collapse collapse" id="collapse"> -->
-            <div class="navbar-collapse collapse" id="collapse" >
+            <div class="navbar-collapse" id="collapse" >
                  <ul class="nav navbar-nav me-auto">
                   <li class="nav-item">
                     <a class="nav-link" *ngIf="isLogin&&!isAdmin"  [routerLink]="['/Home']" routerLinkActive="active">الصفحة الرئيسة</a>
