my-first-project

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -151,7 +151,7 @@
                   </div>
                   
                   <div class=" mb-4">
-                    <button [disabled]="registerform.invalid" class="btn btn-lg btn-block" data-mdb-toggle="modal" data-mdb-target="#exampleModal" type="submit" style="color: white;background-color:#40844e;">
+                    <button [disabled]="registerform.invalid" class="btn btn-lg btn-block" data-mdb-toggle="modal" data-mdb-target="#exampleModal" type="submit" style="color: white;background-color:#40844e;width: 100%;">
                       إنشاء
                     </button>
                   </div>
