--- a/src/app/teatcher-page/teatcher-page.component.html
+++ b/src/app/teatcher-page/teatcher-page.component.html
@@ -12,7 +12,8 @@
                             
                             </div>
                               <div class="btn-group shadow-3 mt-4" role="group" style="display:flex;justify-content: center;">
-                                <button type="button" class="btn mr-2 ml-3" data-mdb-color="dark"  style="width:30%;border-radius: 15px;background-color: #1a72c4;color: white;" (click)="NavigateToexamGrade(item)">عرض الدرجات</button>
+                                <button type="button" class="btn" data-mdb-color="dark"  style="width:30%;border-radius: 15px;background-color: #1a72c4;color: white;    margin-left: 6px;
+                                " (click)="NavigateToexamGrade(item)">عرض الدرجات</button>
                                 <button type="button" class="btn btn-danger ml-1" data-mdb-color="dark" style="width:100px;border-radius: 15px;" [routerLink]="['/sepcificExam']" (click)="NavigateToexamGradeto(item)">عرض الأمتحان</button>
                              </div>
                              <div>
