--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,7 +1,7 @@
 <section >
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-11">
+            <div class="col col-xl-12">
                 <div class="card mb-5" style="border-radius: 15px;">
                     <div class="card-body p-4">
                         <div class="row">
@@ -11,7 +11,7 @@
                                 <button type="button" class="btn" data-mdb-color="dark" style="width:160px;height: 50px;background-color: #40844e;color: white;padding: 3px;">{{item.title}}</button>
                               </div>
                               <div class="btn-group shadow-3 mt-4" role="group" style="display:flex;justify-content: center;">
-                                <button type="button" class="btn btn-primary mr-2 ml-4" data-mdb-color="dark"  style="width:100px;border-radius: 15px;" (click)="NavigateToexamGrade(item)">عرض</button>
+                                <button type="button" class="btn btn-primary " data-mdb-color="dark"  style="width:100px;border-radius: 15px;margin-left: 5px;" (click)="NavigateToexamGrade(item)">عرض</button>
                                 <button type="button" class="btn btn-danger ml-1" data-mdb-color="dark" style="width:100px;border-radius: 15px;" (click)="deleteexam(item.id)">حذف</button>
                               </div>
                             </div>
