--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -56,7 +56,7 @@
                     </div>
   
                     <div class="pt-1 mb-4">
-                      <button class="btn btn-lg btn-block" [disabled]="Loginform.invalid" type="submit" style="background-color:#40844e;color: white;">تسجيل الدخول</button>
+                      <button class="btn btn-lg btn-block" [disabled]="Loginform.invalid" type="submit" style="background-color:#40844e;color: white;width: 100%;">تسجيل الدخول</button>
                     </div>
   
                     <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
