--- a/src/app/before-register/before-register.component.scss
+++ b/src/app/before-register/before-register.component.scss
@@ -1,9 +1,9 @@
-// @import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
-// body{
-//     direction: rtl;
-//     font-family: 'Cairo', sans-serif;
-//     color: white;
-// }
+@import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
+section{
+    direction: rtl;
+    font-family: 'Cairo', sans-serif;
+    color: black;
+}
 input[type=radio] {
     width: 20px;
     height: 20px;
