--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
    <div>
     <h1 style="font-size:50px">اختبارات إلكترونيه</h1>
     <p style="font-size:19px">أهلا بكم في موقع مسار </p>
-    <button [routerLink]="['/Login']" style="width: 150px;height: 50px;border-radius: 25px;background-color:#40844e;border: 1px solid transparent;color: white;">تسجيل الدخول</button>
+    <button [routerLink]="['/Login']" *ngIf="!isLogin" style="width: 150px;height: 50px;border-radius: 25px;background-color:#40844e;border: 1px solid transparent;color: white;">تسجيل الدخول</button>
   </div>
   <!-- <h1 class="mt-5" style="direction: rtl;">wec {{"HOME" | translate }}</h1> -->
 
