my-first-project

--- a/src/app/create-qestion/create-qestion.component.html
+++ b/src/app/create-qestion/create-qestion.component.html
@@ -14,7 +14,7 @@
                                     </div>
                                     <div>
                                         <div class="row">
-                                            <div class="col col-6">
+                                            <div class="col col-lg-6">
                                                 <div class="form-outline">
                                                     <label class="form-label" for="radioa">إجابة أ</label>
                                                     <div style="display:flex;justify-content: space-between;">
@@ -26,7 +26,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col col-6">
+                                            <div class="col col-lg-6">
                                                 <div class="form-outline">
                                                     <label class="form-label" for="radiob">إجابة ب</label>
                                                     <div style="display:flex;justify-content: space-between;">
@@ -40,7 +40,7 @@
                                             </div>
 
                                             <div class="row mt-4">
-                                                <div class="col col-6">
+                                                <div class="col col-lg-6">
                                                     <div class="form-outline">
                                                         <label class="form-label" for="radioc">إجابة ج</label>
                                                         <div style="display:flex;justify-content: space-between;">
@@ -51,7 +51,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col col-6">
+                                                <div class="col col-lg-6">
                                                     <div class="form-outline">
                                                         <label class="form-label" for="radiod">إجابة د</label>
                                                         <div style="display:flex;justify-content: space-between;">
@@ -63,7 +63,7 @@
                                                     </div>
                                                 </div>
                                                 <!-- ************************************ -->
-                                                <div class="col mt-3">
+                                                <div class="col col-12 mt-3">
                                                     <div class="form-outline">
                                                       <label class="form-label" for="form11Example2">درجة السؤال</label>
                                                       <input type="number" id="form11Example2" formControlName="questionDegree" class="form-control" />
@@ -82,7 +82,7 @@
                                             style="width: 150px;height: 50px;border-radius: 25px;background-color:red;border: 1px solid transparent;color: white;">إلغاء</button>
                                        
                                             <button (click)="save(QuestionFom)" type="submit" 
-                                            style="width: 150px;height: 50px;border-radius: 25px;background-color:#1a72c4;border: 1px solid transparent;color: white;">
+                                            style="width: auto;height: auto;border-radius: 25px;background-color:#1a72c4;border: 1px solid transparent;color: white;">
                                             حفظ وإضافة سؤال جديد</button>
                                     </div>
                                 </form>
