--- a/src/app/questionforstudent/questionforstudent.component.html
+++ b/src/app/questionforstudent/questionforstudent.component.html
@@ -7,11 +7,12 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
                 <div class="card mb-5" style="border-radius: 15px;">
-                    <div class="card-body p-4">
-                        <div class="row justify-content-center align-items-center">
+                  <div class="card-body p-4">
+                      <div class="row justify-content-center align-items-center">
                            
-                            <div  class="col col-md-10 col-xl-10 mb-3 "  >
-                                
+                        <div  class="col col-md-10 col-xl-10 mb-3 "  >
+                              
+                            <form >
                                 <div class="card  align-items-start mb-2" style="width: 100%;" *ngFor="let item of question; index as i">                           
                                    
                                     <div class="card-header text-wrap  " style="width: 100%; text-align:right; color: black;"  >
@@ -40,11 +41,11 @@
                                         </div>
                                        
                                     </div>
-                                    <button (click)="save()" type="submit" 
+                                    <button (click)="save()" ng-disabled="isSubmitted" type="submit" 
                                     style="width: 150px;height: 50px;border-radius: 25px;background-color:#1a72c4;border: 1px solid transparent;color: white; ">
                                    تم</button>
                              
-                                   
+                                </form>
                                     <!-- (change)="handleRadioChange(item.questionId,'d') -->
                                 <!-- <button (click)="sendthepbject()">send the answer</button> -->
                             </div>
