--- a/src/app/specificxam/specificxam.component.html
+++ b/src/app/specificxam/specificxam.component.html
@@ -13,14 +13,14 @@
                             </div>
                                 <hr>                            
                             <div class="row mb-4" *ngFor="let item of Questionlist; let i=index">
-                                    <div class="form-outline mb-4">
+                                    <div class="form-outline mb-4 col col-lg-12 col-md-12 ">
                                         <label class="form-label" for="form12" style="text-decoration: underline;">{{i+1}} - السؤال</label>
-                                        <div style="display: flex;justify-content:space-between;">
+                                        <div class="col col-sm-12" style="display: flex;justify-content:space-between;">
                                             <p   id="question" style="border:1px dotted gray;padding: 3px;width: 70%;"
                                             >{{item.question}}</p>
-                                            <div>
-                                                <button class="btn btn-primary ml-1 mb-1" (click)="NavigateToEdit(item)"  >تعديل</button>
-                                                <button class="btn btn-danger mb-1" (click)="deleteQuestion(item.id)">حذف</button>
+                                            <div style="margin-right: 5px;">
+                                                <button class="btn btn-primary " (click)="NavigateToEdit(item)" style="margin-left: 5px;margin-top:4px;" >تعديل</button>
+                                                <button class="btn btn-danger " (click)="deleteQuestion(item.id)" style="margin-top: 4px;">حذف</button>
                                             </div>
                                         </div>
 
